# ConvoCast

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  test_say_command.py  test_setup.py
convocast/: __init__.py  cli.py  types.py
convocast/audio/: __init__.py  tts_generator.py
convocast/config/: __init__.py
convocast/confluence/: __init__.py  client.py
convocast/llm/: __init__.py  vllm_client.py
convocast/processors/: __init__.py  content_processor.py
